# DescribeX

./: .dockerignore  .env.example  .gitignore  README.md  Readme.md  pyproject.toml  test_ffmpeg.py  test_fireworks.py
.agents/: AGENTS.md
apps/web/: package-lock.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: CaptionCard.tsx  ExportBar.tsx  Footer.tsx  Header.tsx  LoadingOverlay.tsx  UploadZone.tsx  UrlInputZone.tsx  VideoPreview.tsx
apps/web/src/hooks/: useCaptionGeneration.ts  useFileUpload.ts
apps/web/src/lib/: constants.ts
apps/web/src/services/: api.ts
apps/web/src/types/: api.ts  caption.ts
docker/: Dockerfile  Dockerfile.render  entrypoint.py  requirements.txt
docs/: ARCHITECTURE.md  PRD.md  SCAFFOLDING.md
engine/: __init__.py  api.py
engine/core/: __init__.py  caption_engine.py
engine/export/: __init__.py  txt_export.py  video_overlay.py
engine/formatting/: __init__.py  formatter.py
engine/preprocessing/: __init__.py  extractor.py  sampler.py  validator.py
engine/prompting/: __init__.py  builder.py  loader.py
engine/prompting/templates/: caption_styles.txt  scene_description.txt
engine/providers/: __init__.py  base.py  factory.py  fireworks.py  gemini.py
engine/tests/: __init__.py  test_imports.py
engine/utils/: __init__.py  config.py  download.py  exceptions.py  logging.py
output/: results.json
samples/: sample_urls.txt  tasks.json
test_data/output/: results.json
tests/: engine_test.py
